# FastApi_Test

./: .gitignore
fastapi_proj/: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  compose_test.yml  pyproject.toml
fastapi_proj/app/: main.py
fastapi_proj/app/front/templates/: email_template.html  index.html  navbar.html  reset_password.html  reset_token.html
fastapi_proj/app/source/conf/: configs.py
fastapi_proj/app/source/crud/: crud_contacts.py  crud_users.py
fastapi_proj/app/source/db/: connect_db.py  models.py
fastapi_proj/app/source/exceptions/: exceptions.py
fastapi_proj/app/source/routes/: routes_auth.py  routes_contacts.py  routes_users.py
fastapi_proj/app/source/schemas/: contacts.py  users.py
fastapi_proj/app/source/services/: auth.py  cloudinary_service.py  faker_contacts.py  mail_service.py  redis_service.py
fastapi_proj/docs/: conf.py
fastapi_proj/docs/_build/doctrees/: environment.pickle  index.doctree
fastapi_proj/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
fastapi_proj/fastapi_proj/: main.py
fastapi_proj/fastapi_proj/front/static/: style.css
fastapi_proj/fastapi_proj/front/templates/: 429.html  base.html
fastapi_proj/fastapi_proj/source/conf/: configs.py
fastapi_proj/migrations/: env.py
fastapi_proj/migrations/versions/: 72ec784ae0d8_init.py
fastapi_proj/tests/: conftest.py
fastapi_proj/tests/integrated/: test_routes_auth.py
fastapi_proj/tests/unit/: test_unit_crud_contacts.py  test_unit_crud_users.py
(+16 files in other folders)
